fix start and end point position

--- a/index.html
+++ b/index.html
@@ -121,39 +121,40 @@
     </div>
     <!-- Game Screen -->
     <div id="game-screen" class="screen">
-        <select id="mobile-phase-select" class="mobile-only">
-            <div id="phase-nav">
-                <button id="phase-1-btn" class="phase-btn active" onclick="startPhase(1)"><span
-                        data-i18n="phase">Phase</span> 1</button>
-                <button id="phase-2-btn" class="phase-btn locked" onclick="startPhase(2)"><span
-                        data-i18n="phase">Phase</span> 2
-                    <span class="locked-text" data-i18n="locked">LOCKED</span></button>
-                <button id="phase-3-btn" class="phase-btn locked" onclick="startPhase(3)"><span
-                        data-i18n="phase">Phase</span> 3
-                    <span class="locked-text" data-i18n="locked">LOCKED</span></button>
-                <button id="phase-4-btn" class="phase-btn locked" onclick="startPhase(4)"><span
-                        data-i18n="phase">Phase</span> 4
-                    <span class="locked-text" data-i18n="locked">LOCKED</span></button>
-                <button id="phase-5-btn" class="phase-btn locked" onclick="startPhase(5)"><span
-                        data-i18n="phase">Phase</span> 5
-                    <span class="locked-text" data-i18n="locked">LOCKED</span></button>
-                <button id="phase-6-btn" class="phase-btn locked" onclick="startPhase(6)"><span
-                        data-i18n="phase">Phase</span> 6
-                    <span class="locked-text" data-i18n="locked">LOCKED</span></button>
-                <button id="phase-7-btn" class="phase-btn locked" onclick="startPhase(7)"><span
-                        data-i18n="phase">Phase</span> 7
-                    <span class="locked-text" data-i18n="locked">LOCKED</span></button>
-                <button id="phase-8-btn" class="phase-btn locked" onclick="startPhase(8)"><span
-                        data-i18n="phase">Phase</span> 8
-                    <span class="locked-text" data-i18n="locked">LOCKED</span></button>
-                <button id="phase-9-btn" class="phase-btn locked" onclick="startPhase(9)"><span
-                        data-i18n="phase">Phase</span> 9
-                    <span class="locked-text" data-i18n="locked">LOCKED</span></button>
-                <button id="phase-10-btn" class="phase-btn locked" onclick="startPhase(10)"><span
-                        data-i18n="phase">Phase</span> 10
-                    <span class="locked-text" data-i18n="locked">LOCKED</span></button>
-            </div>
-        </select>
+
+        <div id="phase-nav">
+            <button id="phase-1-btn" class="phase-btn active" onclick="startPhase(1)"><span
+                    data-i18n="phase">Phase</span> 1</button>
+            <button id="phase-2-btn" class="phase-btn locked" onclick="startPhase(2)"><span
+                    data-i18n="phase">Phase</span> 2
+                <span class="locked-text" data-i18n="locked">LOCKED</span></button>
+            <button id="phase-3-btn" class="phase-btn locked" onclick="startPhase(3)"><span
+                    data-i18n="phase">Phase</span> 3
+                <span class="locked-text" data-i18n="locked">LOCKED</span></button>
+            <button id="phase-4-btn" class="phase-btn locked" onclick="startPhase(4)"><span
+                    data-i18n="phase">Phase</span> 4
+                <span class="locked-text" data-i18n="locked">LOCKED</span></button>
+            <button id="phase-5-btn" class="phase-btn locked" onclick="startPhase(5)"><span
+                    data-i18n="phase">Phase</span> 5
+                <span class="locked-text" data-i18n="locked">LOCKED</span></button>
+            <button id="phase-6-btn" class="phase-btn locked" onclick="startPhase(6)"><span
+                    data-i18n="phase">Phase</span> 6
+                <span class="locked-text" data-i18n="locked">LOCKED</span></button>
+            <button id="phase-7-btn" class="phase-btn locked" onclick="startPhase(7)"><span
+                    data-i18n="phase">Phase</span> 7
+                <span class="locked-text" data-i18n="locked">LOCKED</span></button>
+            <button id="phase-8-btn" class="phase-btn locked" onclick="startPhase(8)"><span
+                    data-i18n="phase">Phase</span> 8
+                <span class="locked-text" data-i18n="locked">LOCKED</span></button>
+            <button id="phase-9-btn" class="phase-btn locked" onclick="startPhase(9)"><span
+                    data-i18n="phase">Phase</span> 9
+                <span class="locked-text" data-i18n="locked">LOCKED</span></button>
+            <button id="phase-10-btn" class="phase-btn locked" onclick="startPhase(10)"><span
+                    data-i18n="phase">Phase</span> 10
+                <span class="locked-text" data-i18n="locked">LOCKED</span></button>
+        </div>
+
+        <select id="mobile-phase-select" class="mobile-only"></select>
         <div id="game-row">
             <!-- Grid -->
             <div class="grid-outer">
